[workspace]
members = []
resolver = "2"

[workspace.dependencies]
anyhow = "1"
embuild = "0.33"
esp-idf-svc = { version = "0.51", features = ["experimental", "alloc"] }
log = { version = "0.4", default-features = false }

heapless = { version = "0.9", default-features = false }

[package]
name = "omnibench"
authors = ["Alex Eden <alexandereden91@gmail.com>"]
version = "0.1.0"
edition = "2024"

[build-dependencies]
embuild.workspace = true

[dependencies]
anyhow.workspace = true
enumset = "1"
esp-idf-svc.workspace = true
heapless.workspace = true
log.workspace = true

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
