[package]
name = "omnibench"
authors = ["Alex Eden <alexandereden91@gmail.com>"]
version = "0.1.0"
edition = "2024"

[build-dependencies]
embuild = "0.33"

[features]
relay = []
# default = ["relay"]

[dependencies]
adafruit-seesaw = { version = "0.13", features = ["nightly"] }
anyhow = "1"
enumset = "1"
embedded-hal-bus = "0.3"
esp-idf-svc = { version = "0.51", features = ["experimental", "alloc"] }
heapless = { version = "0.9", default-features = false }
log = { version = "0.4", default-features = false }
port-expander = "0.6"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
