[package]
name = "omniclient"
authors = ["Alex Eden <alexandereden91@gmail.com>"]
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
# embedded-hal.workspace = true
# embedded-svc = { workspace = true, features = ["use_serde"] }
enumset = "1"
esp-idf-svc.workspace = true
heapless.workspace = true
log.workspace = true

[build-dependencies]
embuild.workspace = true
